<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
    
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:gravity="top"
         android:orientation="vertical">

   <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:padding="20dp"
         android:gravity="center"
         android:orientation="vertical">

     <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="vertical">

  <com.google.android.material.card.MaterialCardView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">

       <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:padding="17dp"
             android:gravity="center"
             android:orientation="vertical">

            <TextView
                 android:id="@+id/root1"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content" />

            <TextView
                 android:id="@+id/root2"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content" />
                        
            <TextView
                 android:id="@+id/root4"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content" />

            <TextView
                 android:id="@+id/root3"
                 android:layout_marginTop="10dp"
                 android:textSize="20sp"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content" />

            <Button
                 android:id="@+id/root_0a"
                 android:text="@string/activity_root_1"
                 android:layout_marginTop="10dp"
                 android:layout_height="wrap_content"
                 android:layout_width="wrap_content" />

        </LinearLayout>

</com.google.android.material.card.MaterialCardView>

     </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:orientation="vertical">

  <com.google.android.material.card.MaterialCardView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/root_2j"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">

       <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:padding="17dp"
             android:gravity="center"
             android:orientation="vertical">

        <TextView
             android:text="@string/activity_root_10"
             android:textSize="17sp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                                   
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>

     </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:orientation="vertical">

  <com.google.android.material.card.MaterialCardView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">

       <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="wrap_content"
             android:padding="17dp"
             android:gravity="center"
             android:orientation="vertical">

        <TextView
             android:text="@string/activity_root_9"
             android:textSize="17sp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                                   
        </LinearLayout>

</com.google.android.material.card.MaterialCardView>

     </LinearLayout>
                
  <androidx.appcompat.widget.AppCompatSeekBar
         android:id="@+id/root_1c"
         android:layout_marginTop="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
  <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2a"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                    
       <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_2"
             android:textSize="50sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
        </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
    </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
 <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2b"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                
        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                    
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_3"
             android:textSize="50sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
            </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
     </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
 <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2c"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                    
     <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_4"
             android:textSize="50sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
        </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
    </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
 <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2d"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                    
        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_5"
             android:textSize="50sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
        </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
    </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
 <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2e"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                    
        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_6"
             android:textSize="50sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
        </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
    </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
 <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2g"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                    
        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_7"
             android:textSize="50sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
            </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
        </LinearLayout>
            
    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:paddingTop="20dp"
         android:gravity="center"
         android:orientation="vertical">
            
 <com.google.android.material.card.MaterialCardView
         android:layout_height="110dp"
         android:layout_width="match_parent"
         android:id="@+id/root_2f"
         android:clickable="true"
         android:focusable="true"
         app:strokeWidth="0dp"
         app:strokeColor="#80808080"
         app:cardBackgroundColor="#80808080"
         app:cardElevation="0dp"
         app:cardMaxElevation="1dp"
         app:cardCornerRadius="37dp">
                    
        <LinearLayout
             android:layout_height="match_parent"
             android:layout_width="match_parent"
             android:gravity="center"
             android:orientation="vertical">
                
        <TextView
             android:layout_marginTop="10dp"
             android:text="@string/activity_root_8"
             android:textSize="40sp"
             android:layout_marginBottom="10dp"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content" />
                    
            </LinearLayout>
            
</com.google.android.material.card.MaterialCardView>
            
    </LinearLayout>

   </LinearLayout>
    
  </LinearLayout>

</androidx.core.widget.NestedScrollView>